Update dialog fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chapter4_allminitask">
         <activity
+            android:name=".SharedPreferences"
+            android:exported="false"/>
+        <activity
+            android:name=".SplashScreen"
+            android:exported="false"/>
+        <activity
             android:name=".RecyclerViewFox.MainRecyclerViewFox"
             android:exported="false" />
         <activity
@@ -27,11 +33,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
