Make ROOM Database #1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chapter4_allminitask">
         <activity
+            android:name=".RoomStev.RoomMainStev"
+            android:exported="false" />
+        <activity
             android:name=".SharedPreferencesLat.HomePageLat"
             android:exported="false" />
         <activity
